--- a/app/src/main/res/layout/activity_final_home_page.xml
+++ b/app/src/main/res/layout/activity_final_home_page.xml
@@ -4,8 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    android:background="@drawable/a__7_"
-    tools:context=".MainActivity">
+    android:background="@drawable/hompage_setelah_donasi"
+    tools:context=".activity.FinalHomePage">
 
 
     <TextView
@@ -83,8 +83,8 @@
 
     <Button
         android:id="@+id/buttonDonasiPremi"
-        android:layout_width="73dp"
-        android:layout_height="62dp"
+        android:layout_width="81dp"
+        android:layout_height="60dp"
         android:layout_marginStart="110dp"
         android:layout_marginLeft="110dp"
         android:layout_marginTop="292dp"
@@ -96,6 +96,7 @@
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
+
 
 
 </androidx.constraintlayout.widget.ConstraintLayout>
