--- a/app/src/main/res/layout/activity_sukses_premi1.xml
+++ b/app/src/main/res/layout/activity_sukses_premi1.xml
@@ -4,7 +4,8 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".activity.SUKSES1">
+    android:background="@drawable/pop_up_sukses__2"
+    tools:context=".activity.SuksesPremi1">
 
 
     <ImageView
@@ -21,12 +22,18 @@
         android:id="@+id/textView2"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginStart="82dp"
+        android:layout_marginLeft="82dp"
         android:layout_marginTop="400dp"
+        android:layout_marginEnd="82dp"
+        android:layout_marginRight="82dp"
+        android:layout_marginBottom="278dp"
         android:gravity="center_horizontal"
         android:text="Terima Kasih!"
         android:textAlignment="center"
         android:textSize="40dp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent" />
@@ -36,30 +43,34 @@
         android:id="@+id/textView3"
         android:layout_width="418dp"
         android:layout_height="43dp"
-        android:layout_marginTop="12dp"
+        android:layout_marginTop="466dp"
+        android:layout_marginBottom="222dp"
         android:gravity="center_horizontal"
         android:text="Karena Orang baik seperti anda,"
         android:textAlignment="center"
         android:textSize="24sp"
-        app:layout_constraintBottom_toTopOf="@+id/textView4"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/imageView"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView2" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <TextView
         android:id="@+id/textView4"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
+        android:layout_marginTop="509dp"
+        android:layout_marginBottom="162dp"
         android:gravity="center_horizontal"
         android:text="Ribuan orang dapat kembali bahagia setiap harinya"
         android:textAlignment="center"
         android:textSize="24sp"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.0"
         app:layout_constraintStart_toStartOf="parent"
-        app:layout_constraintTop_toBottomOf="@id/textView3" />
+        app:layout_constraintTop_toTopOf="parent" />
 
     <Button
         android:id="@+id/buttonSukses1Selanjutnya"
@@ -91,6 +102,4 @@
         app:layout_constraintHorizontal_bias="1.5"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toBottomOf="parent" />
-
-
 </androidx.constraintlayout.widget.ConstraintLayout>
